tut: Move page-sections-panel right of #toc-and-doc

--- a/projects/bundle_tutorial/single_page_book_app/resources_singlepage/style.css
+++ b/projects/bundle_tutorial/single_page_book_app/resources_singlepage/style.css
@@ -97,6 +97,7 @@ body {
     height: 100%;
     overflow: hidden;
     gap: 1rem;
+    position: relative;
 }
 
 /* ==========================
@@ -215,7 +216,7 @@ body {
    (appear at the right when the user clicks on a button)
 ========================== */
 .page-sections {
-    position: fixed;
+    position: absolute;
     top: 0;
     right: 0;
     width: 300px;
